{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 185,
  "lineage": "63357653-c9d2-2468-efcf-a2e8afc575de",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418272794059:internet-gateway/igw-0f9a4c2da331c0ba8",
            "id": "igw-0f9a4c2da331c0ba8",
            "owner_id": "418272794059",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-igw",
              "Project": "Terraform-AWS-Project"
            },
            "vpc_id": "vpc-049c15c930bbc6a71"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418272794059:route-table/rtb-0dbf9323b7fb03074",
            "id": "rtb-0dbf9323b7fb03074",
            "owner_id": "418272794059",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-private-rt",
              "Project": "Terraform-AWS-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c15c930bbc6a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418272794059:route-table/rtb-0dfa80e1f9eb7794a",
            "id": "rtb-0dfa80e1f9eb7794a",
            "owner_id": "418272794059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9a4c2da331c0ba8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-public-rt",
              "Project": "Terraform-AWS-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c15c930bbc6a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b82bb53934035e2",
            "route_table_id": "rtb-0dbf9323b7fb03074",
            "subnet_id": "subnet-031baa1ec077a9bcf"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb1c36cf76e63341",
            "route_table_id": "rtb-0dbf9323b7fb03074",
            "subnet_id": "subnet-0ec81a7dd36ebc12a"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_2",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8066c9ddcdad280",
            "route_table_id": "rtb-0dfa80e1f9eb7794a",
            "subnet_id": "subnet-08b01b64a070ae00f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418272794059:subnet/subnet-031baa1ec077a9bcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031baa1ec077a9bcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418272794059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-private-subnet",
              "Project": "Terraform-AWS-Project"
            },
            "vpc_id": "vpc-049c15c930bbc6a71"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418272794059:subnet/subnet-0ec81a7dd36ebc12a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec81a7dd36ebc12a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418272794059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-private-subnet-2",
              "Project": "Terraform-AWS-Project"
            },
            "vpc_id": "vpc-049c15c930bbc6a71"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418272794059:subnet/subnet-08b01b64a070ae00f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b01b64a070ae00f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "418272794059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-public-subnet",
              "Project": "Terraform-AWS-Project"
            },
            "vpc_id": "vpc-049c15c930bbc6a71"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418272794059:vpc/vpc-049c15c930bbc6a71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea3124f7fe212cfd",
            "default_route_table_id": "rtb-00c5ecb2f3e6513e3",
            "default_security_group_id": "sg-0d008a87967cc6fc2",
            "dhcp_options_id": "dopt-0c6877faf2b81988c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049c15c930bbc6a71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c5ecb2f3e6513e3",
            "owner_id": "418272794059",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-vpc",
              "Project": "Terraform-AWS-Project"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418272794059:security-group/sg-088bd9774e9978735",
            "description": "Allow database traffic from web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088bd9774e9978735",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from web servers",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0468eebee18bbe663"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-db-sg",
            "name_prefix": "",
            "owner_id": "418272794059",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-db-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-db-sg",
              "Project": "Terraform-AWS-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c15c930bbc6a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc",
            "module.security.aws_security_group.web"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418272794059:security-group/sg-0468eebee18bbe663",
            "description": "Allow web and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0468eebee18bbe663",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-web-sg",
            "name_prefix": "",
            "owner_id": "418272794059",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-web-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-web-sg",
              "Project": "Terraform-AWS-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c15c930bbc6a71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9e748ddd009d791",
            "association_id": "eipassoc-0a0a43930a35be025",
            "domain": "vpc",
            "id": "eipalloc-0a9e748ddd009d791",
            "instance": "i-00063384197814ccf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09f0a8651c36598df",
            "private_dns": "ip-10-0-1-42.ec2.internal",
            "private_ip": "10.0.1.42",
            "public_dns": "ec2-98-83-10-126.compute-1.amazonaws.com",
            "public_ip": "98.83.10.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-web-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-web-eip",
              "Project": "Terraform-AWS-Project"
            },
            "vpc": true
          },
          "dependencies": [
            "module.database.aws_db_instance.default",
            "module.database.aws_db_parameter_group.default",
            "module.database.aws_db_subnet_group.default",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.private_2",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main_vpc",
            "module.security.aws_security_group.db",
            "module.security.aws_security_group.web",
            "module.webserver.aws_instance.web",
            "module.webserver.aws_key_pair.web_key",
            "module.webserver.data.aws_ami.ubuntu",
            "module.webserver.tls_private_key.web_key"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ca0754cabb20b45",
            "arn": "arn:aws:ec2:us-east-1:418272794059:instance/i-00063384197814ccf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00063384197814ccf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f0a8651c36598df",
            "private_dns": "ip-10-0-1-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.42",
            "public_dns": "ec2-44-204-139-248.compute-1.amazonaws.com",
            "public_ip": "44.204.139.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:418272794059:key/10205c4a-3226-414f-bab4-ff0358ac4891",
                "tags": {
                  "Name": "dev-web-server-volume"
                },
                "throughput": 0,
                "volume_id": "vol-0caea1bc8054c09ee",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b01b64a070ae00f",
            "tags": {
              "Name": "dev-web-server"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-web-server",
              "Project": "Terraform-AWS-Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0468eebee18bbe663"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.database.aws_db_instance.default",
            "module.database.aws_db_parameter_group.default",
            "module.database.aws_db_subnet_group.default",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.private_2",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main_vpc",
            "module.security.aws_security_group.db",
            "module.security.aws_security_group.web",
            "module.webserver.aws_key_pair.web_key",
            "module.webserver.data.aws_ami.ubuntu",
            "module.webserver.tls_private_key.web_key"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}